--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -9,8 +9,8 @@
   <body>
     <h2>To-Do List</h2>
     <input type="text" id="taskInput" placeholder="Enter a task" />
-    <button onClick="addTask()">Add Task</button>
-    <ul id="tasklist"></ul>
+    <button onclick="addTask()">Add Task</button>
+    <ul id="taskList"></ul>
     <script src="script.js"></script>
   </body>
 </html>
